Fix line break not showing in description

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,10 @@
 
 }
 
+.productcell p {
+    white-space: pre;
+}
+
 .productcell img:hover {
     transform: scale(1.1);
     cursor: pointer;
